beryllium (0.7.0) debian;

  * Builtin motion detection
  * Translation fixes

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 28 Feb 2014 17:00:00 +0900

beryllium (0.6.0) debian;

  * Video start of the cut fix
  * Motion detection via opencv plugin
  * Compressed sources support (DV, MPEG cameras)

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 25 Feb 2014 12:49:00 +0900

beryllium (0.5.0) debian;

  * Confirmation settings
  * Modality can be selected from one of four build-ins
  * Real OID (1.2.643.2.66)

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 18 Feb 2014 13:45:00 +0900

beryllium (0.4.3) debian;

  * New field: Accession number is hidden by default
  * Clips & images uses different series_no/series_uid

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 13 Feb 2014 11:22:00 +0900

beryllium (0.4.2) debian;

  * New field: Accession number
  * startStudy new parameter: (accessionNumber,id,name,sex,bd,phys,study)
  * Dedicated archive window

 -- Pavel Bludov <pbludov@gmail.com>  Wed, 12 Feb 2014 19:12:00 +0900

beryllium (0.4.1) debian;

  * D-Bus support. One method: startStudy(id,name,sex,bd,phys,study)
  * Limit Beryllium to one instance (via D-BUS)

 -- Pavel Bludov <pbludov@gmail.com>  Wed, 12 Feb 2014 15:56:00 +0900

beryllium (0.4.0) debian;

  * Tablet (touch) version

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 11 Feb 2014 12:12:00 +0900

beryllium (0.3.28) debian;

  * Dedicated output folder for video logs
  * Timeout for clips recording

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 7 Feb 2014 11:35:00 +0900

beryllium (0.3.27) debian;

  * Option to show start dialog (--auto-start, -a)
  * Support for cameras with ranged resolution
  * The option "Send videos as raw data" implemented
  * New attributes: StudyDescription, PerforminPhysicianName
  * Clear thumbnail list in capture window on end of study
  * Restore scrollbar in icon mode in archive window

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 6 Feb 2014 17:33:00 +0900

beryllium (0.3.26) debian;
